Zakat App with some functionality

--- a/Zakat Calculator/templates/calculate.html
+++ b/Zakat Calculator/templates/calculate.html
@@ -35,7 +35,10 @@
                             </div>
                         
                             <input type="submit" value="Submit" class="btn btn-success" />
+                            <br>
+                            <hr>
                         
+                            <h4> <a href="/registration" class="btn btn-success">Register Yourself</a> to Save Information!</h4>
                           </form>
     
             </div>
