--- a/Zakat Calculator/templates/index.html
+++ b/Zakat Calculator/templates/index.html
@@ -10,8 +10,8 @@
   <h2>Zakat Made Easy</h2>
   <br>
  
-  <a href="/registration" class="btn btn-success">Calculate Zakat</a>
-
+  <a href="/registration" class="btn btn-primary">Register Yourself</a>
+  <a href="/calculate" class="btn btn-success">Calculate Zakat</a>
 
 
 </div>
