--- a/Zakat Calculator/templates/information.html
+++ b/Zakat Calculator/templates/information.html
@@ -16,7 +16,7 @@
      that are prevalent among Muslims.
     The lines below discuss the importance of Zakat in Islam and the general misconceptions people have regarding it.</p>
 
-    <a href="/registration" class="btn btn-success">Calculate Zakat</a>
+    <a href="/calculate" class="btn btn-success">Calculate Zakat</a>
 
 
 </div>
