--- a/Zakat Calculator/templates/registration.html
+++ b/Zakat Calculator/templates/registration.html
@@ -32,7 +32,7 @@
         {{render_field(form.confirm , class_ = 'form-control')}}
       </div>
   
-      <input type="submit" value="Submit" class="btn btn-success" />
+      <input type="submit" value="Sign Up" class="btn btn-success" />
   
     </form>
   
