--- a/Zakat Calculator/templates/login.html
+++ b/Zakat Calculator/templates/login.html
@@ -18,7 +18,8 @@
         {{render_field(form.password , class_ = 'form-control')}}
       </div>
   
-      <input type="submit" class="btn btn-success" />
+      <input type="submit" value="Login" class="btn btn-primary" />
+      <a href="/registration" class="btn btn-success">Sign Up</a>
   
     </form>
   
